--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@
 <html lang="en">
 <head>
   <title>POPCAT CLASSIC</title>
+<!--  容器 box 高度100vh flex排版方向column 水平垂直置中-->
+<!--  容器樣式 背景顏色 #bdaa90-->
+  <style>
+    .container{
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color:#bdaa90
+    }
+    /*標題 box 寬度80% 上方間距 2em*/
+    .title{
+        width: 80%;
+        margin-top: 2em;
+    }
+    /*文字 box 寬度100%*/
+    /*文字樣式 文字置中 文字白色 大小80px 邊框3px 黑色*/
+    .cat-img{
+        width: 100%;
+        text-align: center;
+        color: white;
+        font-size: 80px;
+        border: 3px solid black;
+    }
+    /*文字 div 背景圖片 用 id 設定imgs/p.png 圖片靠下 填滿容器 不重複*/
+    #p{
+        background-image: url('imgs/p.png');
+        background-position: bottom;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+  </style>
+
 </head>
 
 <body>
 <!--新增容器包裹標題和點擊數-->
-<div>
+<div class="container">
   <img class="title" src="imgs/popcat.svg" alt="POPCAT">
   <div class="cat-img" id="p">0</div>
 </div>
