--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
         background-size: cover;
         background-repeat: no-repeat;
     }
+    /*文字 div 排版填滿剩餘空間*/
+    .cat-img{
+        flex-grow: 1;
+    }
+    /*防止文字被選取*/
+    .cat-img{
+        user-select: none;
+    }
+    /*body box 編距為0*/
+    /*字型 sans-serif*/
+    body{
+        margin: 0;
+        font-family: sans-serif;
+    }
+
   </style>
 
 </head>
