--- a/index.html
+++ b/index.html
@@ -49,7 +49,18 @@
         margin: 0;
         font-family: sans-serif;
     }
-
+    /*標題 box 最大寬度 600px*/
+    .title{
+        max-width: 600px;
+    }
+    /*文字 box 最大寬度 800px*/
+    .cat-img{
+        max-width: 800px;
+    }
+    /*新贈文字 div 背景圖片 用 id 設定 imgs/op.png*/
+    #p{
+        background-image: url('imgs/op.png');
+    }
   </style>
 
 </head>
