--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         font-size: 80px;
         border: 3px solid black;
     }
-    /*文字 div 背景圖片 用 id 設定imgs/p.png 圖片靠下 填滿容器 不重複*/
+    /*文字 div 背景圖片 用 id 設定imgs/p.png 圖片靠下 填滿容器contain 不重複*/
     #p{
         background-image: url('imgs/p.png');
         background-position: bottom;
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
     }
     /*文字 div 排版填滿剩餘空間*/
